pre-code optimierung blockquote: grafiken ohne shadown und border

--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -161,7 +161,6 @@ $font-size-meta:		13;
 $font-size-sidebar:		13;
 
 
-
 $font-size-breadcrumb:		13;
 $font-size-herosearch:		16;
 $font-size-header-branding:	19;
@@ -177,6 +176,7 @@ $font-size-link-contentmenu:    13;
 
 $font-size-content-linkicon:	10;
 $font-size-content-listitem:	$font-size-base;
+$font-size-codepre:		13;
 
 
 $font-size-sidebar-listitem:    $font-size-sidebar;
@@ -214,6 +214,7 @@ $font-size-quotes-cites:	($font-size-quotes - 1);
 $font-size-content-meta:	14;
 $font-size-pagination-h3:	$font-size-content-meta;
 $font-size-pagination-links:	$font-size-content-meta;
+
 
 $font-size-mobile-meta:	24;
 
