--- a/css/sass/_reset.scss
+++ b/css/sass/_reset.scss
@@ -169,64 +169,6 @@ h6 {
 	text-rendering: optimizelegibility;
 }
 
-h1 small,
-h2 small,
-h3 small,
-h4 small,
-h5 small,
-h6 small {
-	font-weight: normal;
-	line-height: 1;
-}
-
-h1,
-h2,
-h3 {
-	line-height: 34px;
-}
-
-h1 {
-	font-weight: bold;
-	font-size: 32px;
-}
-
-h2 {
-	font-size: 32px;
-}
-
-h3 {
-	font-size: 22px;
-}
-
-h4 {
-	font-size: 18px;
-	font-weight: bold;
-}
-
-h5 {
-	font-size: 15px;
-	font-weight: bold;
-}
-
-h6 {
-	font-size: 15px;
-}
-
-h1 small {
-	font-size: 24.5px;
-}
-
-h2 small {
-	font-size: 17.5px;
-}
-
-h3 small {
-	font-size: 14px;
-}
-
-h4 small {
-	font-size: 14px;
-}
 
 ul,
 ol {
@@ -318,9 +260,7 @@ blockquote.pull-right small:after {
 }
 
 q:before,
-q:after,
-blockquote:before,
-blockquote:after {
+q:after {
 	content: "";
 }
 
@@ -329,56 +269,6 @@ address {
 	margin-bottom: 20px;
 	font-style: normal;
 	line-height: 20px;
-}
-
-code,
-pre {
-	padding: 0 3px 2px;
-	font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
-	font-size: 12px;
-	color: #333333;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-}
-
-code {
-	padding: 2px 4px;
-	color: #d14;
-	white-space: nowrap;
-	background-color: #f7f7f9;
-	border: 1px solid #e1e1e8;
-}
-
-pre {
-	display: block;
-	padding: 9.5px;
-	margin: 0 0 10px;
-	font-size: 13px;
-	line-height: 20px;
-	word-break: break-all;
-	word-wrap: break-word;
-	white-space: pre;
-	white-space: pre-wrap;
-	background-color: #f5f5f5;
-	border: 1px solid #ccc;
-	border: 1px solid rgba(0, 0, 0, 0.15);
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-}
-
-pre.prettyprint {
-	margin-bottom: 20px;
-}
-
-pre code {
-	padding: 0;
-	color: inherit;
-	white-space: pre;
-	white-space: pre-wrap;
-	background-color: transparent;
-	border: 0;
 }
 
 form {
