--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ GitHub Theme URI: https://github.com/RRZE-Webteam/FAU-Einrichtungen
 Author: RRZE-Webteam
 Author URI: http://www.rrze.fau.de
 Description: Wordpress-Theme für zentrale Einrichtungen der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)
-Version: 1.7.84
+Version: 1.7.85
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: blue, gray, silver, white, three-columns, two-columns, one-column, right-sidebar, responsive-layout, featured-images, microformats
+Tags: blue, gray, silver, white, three-columns, two-columns, one-column, right-sidebar, responsive-layout, featured-images
 Text Domain: fau
 */
 
