--- a/css/sass/plugins/_fau-person.scss
+++ b/css/sass/plugins/_fau-person.scss
@@ -73,6 +73,7 @@
 	margin: 0 15px;
 	padding: 0;
 	border: none;
+	display: inline-block;
 	
 	@media (min-width: $screen-sm) {
 	    border: 1px solid $colorStandardHellgrau;
