--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -189,10 +189,12 @@ $font-size-nav-blockquote:	16;
 $font-size-nav-blockquote-cite:	14;
 $font-size-nav-introtext:	15;
 $font-size-nav-flyout-items:	15;
-
+$font-size-nav-mainlinks:	17;
 
 $font-size-h1:			32;
 $font-size-h1-mobilebranding:	24;
+$font-size-h1-desktopbranding:	20;
+$font-size-h1-desktopbranding-longtitle:    17;
 $font-size-h1-banner:		28;
 
 $font-size-h2:			24;
