--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -7,7 +7,6 @@
 
  // DEBUGMODE
  // (Sets border around container and main regions)
-    
 $debugmode: 'false';
 
 
@@ -160,7 +159,7 @@ $font-size-base:		15;
 $font-size-meta:		13;
 $font-size-sidebar:		13;
 
-
+$font-size-footer:		13;
 $font-size-breadcrumb:		13;
 $font-size-herosearch:		16;
 $font-size-header-branding:	19;
