--- a/css/sass/plugins/_fau-person.scss
+++ b/css/sass/plugins/_fau-person.scss
@@ -222,10 +222,16 @@ span[itemprop="honorificPrefix"],
 span[itemprop="honorificSuffix"] {
     white-space: nowrap;
 }
+.fullname {
+    @include hyphens(none);
+    white-space: nowrap;
+     
+}
 
 .widget .person ul.person-info ul {
     margin: 0 0 10px 25px;
 }
+
 
 
 /* Sidebar: Inline */
