#395 ZUsatzclasses bei Tables um odd und hintergrundfarben zu verhindern: .nobackground .nooddcolor

--- a/css/sass/elements/_headlines.scss
+++ b/css/sass/elements/_headlines.scss
@@ -69,7 +69,7 @@ h2 {
 	    @include px2rem($font-size-h2-small);
 	}
 	 
-	.sidebar-inline .quicklinks & {  	
+	.quicklinks & {  	
 		font-weight: bold;
 		padding-bottom: 11px;
 		padding-top: 0;
