#394 Zusatzklassen für Tabellen verbessert (keine Border)

--- a/css/sass/elements/_tables.scss
+++ b/css/sass/elements/_tables.scss
@@ -110,8 +110,12 @@ table {
 	    }
 	}
 	&.nobackground {
+	    border-top: none;
+	    border-bottom: none;
 	    th {
 		background: transparent;
+		border-top: none;
+		border-bottom: none;
 	    }
 	    tr:nth-child(odd) td {
 		background: transparent;
