--- a/css/sass/elements/_tables.scss
+++ b/css/sass/elements/_tables.scss
@@ -49,8 +49,8 @@ table {
 	th, td {
 		padding-left: 15px;
 		padding-right: 15px;
-		font-size: 13px;
-		line-height: 18px;
+		@include px2rem($font-size-table);	    	
+		
 	}
 	
 	th {
@@ -60,6 +60,11 @@ table {
 		border-top: 1px solid $colorContentBorders;
 		border-bottom: 1px solid $colorContentBorders;
 		text-align: left;
+		
+
+	}
+	&.sorttable th.header {
+	    cursor: pointer;
 	}
 	
 	td {
@@ -91,8 +96,7 @@ table {
 	ul {
 		li {
 			color: $colorPrimary;
-			font-size: 13px;
-			line-height: 18px;
+			@include px2rem($font-size-table);	    
 			background-position: left 5px;
 		}
 	}
@@ -116,6 +120,10 @@ table {
 		background: transparent;
 		border-top: none;
 		border-bottom: none;
+	    }
+	    tr {
+		border-left: none;
+		border-right: none;
 	    }
 	    tr:nth-child(odd) td {
 		background: transparent;
