update nach Bugfixes/Enh. aus FAU Einrichtungen

--- a/css/sass/structure/_header.scss
+++ b/css/sass/structure/_header.scss
@@ -160,7 +160,10 @@
 	}
 	.nologo &.branding {
 		padding: 0 0 3px 15px;
-	 
+	 		
+		h1 {
+		     margin: 0 0 7px 0;
+		}
 	}
 	img {
 	   max-width: 240px;
