--- a/css/sass/elements/_forms.scss
+++ b/css/sass/elements/_forms.scss
@@ -56,7 +56,7 @@ form {
 label {
 	padding-top: 5px;
 	margin-right: 20px;
-	display: inline-block;
+	display: block;
 	@include px2rem($font-size-base);
 	
 }
