--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -285,6 +285,10 @@ $font-size-quotes:		18;
 $font-size-quotes-cites:	($font-size-quotes - 1);    
 
 $font-size-content-meta:	14;
+
+$font-size-image-caption:	13;
+
+
 $font-size-pagination-h3:	$font-size-content-meta;
 $font-size-pagination-links:	$font-size-content-meta;
 
