--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -1,7 +1,7 @@
 //-----------------------------------------------------------------------------------*/
 // Konstanten fuer das Design
 //-----------------------------------------------------------------------------------*/
-$version:  '1.9.1';
+$version:  '1.9.2';
     // Theme Version
     // First Digit:  Manual
     // Second Digit: Branch Version
@@ -19,6 +19,8 @@ $debugmode: 'false';
 $fontStack:		'roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
 $fontStackSerifs:	Georgia, serif;
 $font-family-base:	$fontStack;
+$font-path-awesome:	'./fonts/fontawesome/';
+$font-path-roboto:	'./fonts/roboto/';
 
 
 // Define colors
