--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -1,7 +1,7 @@
 //-----------------------------------------------------------------------------------*/
 // Konstanten fuer das Design
 //-----------------------------------------------------------------------------------*/
-$version:  '1.9.6';
+$version:  '1.9.7';
     // Theme Version
     // First Digit:  Manual
     // Second Digit: Branch Version
@@ -202,8 +202,8 @@ $colorSocialBackground:		$colorMetaBackground;
 
 
 // CopyrightInfos auf Slider und Banner
-$colorCopyright:	     #ddd;
-$colorCopyrightBackground:  rgba(0,0,0,0.4);
+$colorCopyright:	     #fff;
+$colorCopyrightBackground:  rgba(0,0,0,0.7);
 
 
 
@@ -234,7 +234,7 @@ $font-size-table:		13;
 
 $font-size-sidebar-listitem:    $font-size-sidebar;
 $font-size-sidebar-events:	$font-size-sidebar;
-$font-size-sidebar-events-month:    9;
+$font-size-sidebar-events-month:    10;
 $font-size-sidebar-events-day:	20;
 
 $font-size-socialmedia-morelink:    $font-size-sidebar;
