--- a/css/sass/backend/_customizer.scss
+++ b/css/sass/backend/_customizer.scss
@@ -74,5 +74,86 @@
 	}
     }
     
+    
+    .customize-control-range-value {
+	.range-slider {
+	    width: 100%;
+	}
+
+	.range-slider__range {
+	    -webkit-appearance: none;
+	    width: calc(100% - (95px));
+	    height: 10px;
+	    border-radius: 5px;
+	    background: #d7dcdf;
+	    outline: none;
+	    padding: 0;
+	    margin: 0;
+	}
+
+	.range-slider__range::-webkit-slider-thumb {
+	    -webkit-appearance: none;
+	    appearance: none;
+	    width: 20px;
+	    height: 20px;
+	    border-radius: 50%;
+	    background: #0085ba;
+	    cursor: pointer;
+	    -webkit-transition: background .15s ease-in-out;
+	    transition: background .15s ease-in-out;
+	}
+
+	.range-slider__range::-webkit-slider-thumb:hover {
+	    background: #0085ba;
+	}
+
+	.range-slider__range:active::-webkit-slider-thumb {
+	    background: #0085ba;
+	}
+
+	.range-slider__range::-moz-range-thumb {
+	    width: 20px;
+	    height: 20px;
+	    border: 0;
+	    border-radius: 50%;
+	    background: #0085ba;
+	    cursor: pointer;
+	    -webkit-transition: background .15s ease-in-out;
+	    transition: background .15s ease-in-out;
+	}
+
+	.range-slider__range::-moz-range-thumb:hover {
+	    background: #0085ba;
+	}
+
+	.range-slider__range:active::-moz-range-thumb {
+	    background: #0085ba;
+	}
+
+	.range-slider__value {
+	    display: inline-block;
+	    position: relative;
+	    width: 30px;
+	    color: #fff;
+	    line-height: 20px;
+	    text-align: center;
+	    border-radius: 3px;
+	    background: #0085ba;
+	    padding: 2px 5px;
+	    margin-left: 8px;
+	}
+
+
+	::-moz-range-track {
+	    background: #d7dcdf;
+	    border: 0;
+	}
+
+	input::-moz-focus-inner, input::-moz-focus-outer {
+	    border: 0;
+	}
+    }
+    
+    
 }    
 
