Vorbereitungen für neue Orga Breadcrumb

--- a/css/sass/structure/header/_meta.scss
+++ b/css/sass/structure/header/_meta.scss
@@ -29,6 +29,19 @@
 	    top: $wordpress-adminbar-smallheight;
 	}
     }
+    
+    .fau-orga-breadcrumb {
+	display: none;
+	// an dieser STelle müssen die Anweisungen zur FAU ORGA Breadcrumb kommen.
+	// ggf. müssen auch Änderungen an der _branding.scss gemacht werden.
+	
+
+	
+	@media (min-width: $screen-sm ) {
+	    // ab 768px ..
+	}
+    }
+    
 }
 
 
