- navistruktur angepasst aufgrund wcag test - customizer weiter - social media näher am footer - default bilder für thumbs bei artikel und topevents

--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -1,7 +1,7 @@
 //-----------------------------------------------------------------------------------*/
 // Konstanten fuer das Design
 //-----------------------------------------------------------------------------------*/
-$version:  '1.9.13';
+$version:  '1.9.15';
     // Theme Version
     // First Digit:  Manual
     // Second Digit: Branch Version
@@ -231,6 +231,7 @@ $font-size-content-linkicon:	10;
 $font-size-content-listitem:	$font-size-base;
 $font-size-codepre:		13;
 $font-size-table:		13;
+$font-size-comtentwidgets:	13;
 
 $font-size-sidebar-listitem:    $font-size-sidebar;
 $font-size-sidebar-events:	$font-size-sidebar;
