--- a/css/sass/structure/header/_branding.scss
+++ b/css/sass/structure/header/_branding.scss
@@ -19,7 +19,7 @@
     top: 0;
     left: 0;
     right: 0;
-    margin-top: 40px;
+
     background: $colorPrimary;
     color: #fff;
     z-index: 100;
@@ -27,7 +27,7 @@
 
     @media (min-width: $screen-sm) {
 	position: fixed;
-	
+	margin-top: 40px;
 	.admin-bar & {
 	    margin-top: 40px + $wordpress-adminbar-bigheight;
 	}
@@ -118,60 +118,75 @@
  
  
 #logo {	
-	h1 {
-	    color: $colorPrimary;
-	    overflow: hidden;
-	    margin: 0 0 10px 0;
-	    
-	    max-height: inherit; 
-	    @media (min-width: $screen-sm ) {
-		  max-height: 65px;
-		  margin-top: 0px;
-	    }
-	    
-	    a, span {
-		display: table-cell;
-		vertical-align: bottom;
-	    }
-	    a {
-		color: $colorPrimary;
-		text-decoration: none;	
-	    } 
+    .sitetitle {
+        padding: 0;
+    }
+    .sitetitle,
+    h1 {
+        color: $colorPrimary;
+        overflow: hidden;
+        margin: 0 0 10px 0;
+        max-height: inherit;
+        font-weight: bold;
+        text-decoration: none;
+        padding: 0;
 
-	    
-	    @include px2rem($font-size-h1-mobilebranding);
-	    @media (min-width: $screen-sm) {
-		@include px2rem($font-size-h1-desktopbranding);
-		
-		.nologo.longtitle & {
-		   @include px2rem($font-size-h1-desktopbranding-longtitle, $font-size-gridbase, $font-size-h1-desktopbranding-longtitle + 2);
-		
-		   hyphens: auto;
-		}
-		
-	    }
-	    
-	    
-	    @media (max-width: $screen-sm - 1) {
-		color: #fff;
-		a {
-		    color: #fff;
-		}
-	    } 
-	}
-	.nologo &.branding {
-		padding: 0 0 3px 15px;
-	 		
-		h1 {
-		     margin: 0 0 7px 0;
-		}
-	}
-	img {
-	   max-width: 240px;
-	   max-height: 65px;
-	   width: auto;
-	   height: auto; 		
-	}
+        @media (min-width: $screen-sm ) {
+              max-height: 65px;
+              margin-top: 0px;
+        }
+
+        a, span {
+            display: table-cell;
+            vertical-align: bottom;
+        }
+        a {
+            color: $colorPrimary;
+            text-decoration: none;	
+        } 
+
+
+        @include px2rem($font-size-h1-mobilebranding, $font-size-gridbase, $font-size-h1-mobilebranding);
+        @media (min-width: $screen-sm) {
+            @include px2rem($font-size-h1-desktopbranding, $font-size-gridbase, $font-size-h1-desktopbranding);
+
+            .nologo.longtitle & {
+               @include px2rem($font-size-h1-desktopbranding-longtitle, $font-size-gridbase, $font-size-h1-desktopbranding-longtitle + 2);
+
+               hyphens: auto;
+            }
+
+        }
+
+
+        @media (max-width: $screen-sm - 1) {
+            color: #fff;
+            a {
+                color: #fff;
+            }
+        } 
+    }
+    .nologo &.branding {
+            padding: 0 0 3px 15px;
+            
+            .sitetitle,	
+            h1 {
+                
+                @media (min-width: $screen-sm) {
+                    padding: 15px 0;
+                }  
+                 @media (min-width: $screen-md) {
+                    padding: 0;
+                }  
+                margin: 0 0 7px 0;     
+            }
+    }
+    img {
+       max-width: 240px;
+       max-height: 65px;
+       width: auto;
+       height: auto; 		
+    }
 }
 
 
