--- a/css/sass/structure/hero/_linkregion.scss
+++ b/css/sass/structure/hero/_linkregion.scss
@@ -22,9 +22,65 @@
 	    color: #fff;
 	    width: 20px;
 	} 
-
-
+	
+	
+	&.zuv, &.phil,
+	&.philfak, &.rw,
+	&.rwfak , &.med,
+	&.medfak, &.nat,
+	&.natfak, &.tf,
+	&.techfak, 
+	&.white, &.grau {
+	    min-height: 34px;
+	    line-height: 34px;
+	    border-left: 8px solid transparent;
+	    vertical-align: center;
+	    @include hyphens(auto);
+	    
+	    
+	    &:before {
+		    display: none;
+		    content: "";
+	    }
+	    a {
+			@include inline-block;
+			padding: 2px 0 2px 10px;
+			line-height: 16px;
+			vertical-align: center;
+	    }
+	}
+	&.zuv {
+			border-color: $colorZUV;
+	}
+	&.phil,
+	&.philfak {
+		border-color: $colorPhilFak;
+	}
+	&.rw,
+	&.rwfak {
+		border-color: $colorRwFak;
+	}
+	&.med,
+	&.medfak {
+		border-color: $colorMedFak;
+	}
+	&.nat,
+	&.natfak  {
+		border-color: $colorNatFak;
+	}
+	&.tf,
+	&.techfak {
+		border-color: $colorTechFak;
+	}	
+	&.white {
+		border-color: #fff;
+	}
+	&.gray {
+		border-color: $colorStandardHellgrau;
+	}
     }
+ 
+    
     .infobar {
 	padding-top: 5px;
 
@@ -100,51 +156,3 @@
 		}		
 	}
 	
-#hero {
- /* Faculties Menu */
-    .menu-faculties {
-	@include no-list;
-	
-	li {
-		@include no-list;
-		@include px2rem($font-size-hero-links);
-		
-		min-height: 34px;
-		line-height: 34px;
-		border-left: 8px solid #fff;
-		vertical-align: center;
-		@include hyphens(auto);
-		
-		:before {
-		    display: none;
-		    content: "";
-		}
-		a {
-			@include inline-block;
-			padding: 2px 0 2px 10px;
-			line-height: 16px;
-			vertical-align: center;
-		}
-		&.phil,
-		&.philfak {
-			border-color: $colorPhilFak;
-		}
-		&.rw,
-		&.rwfak {
-			border-color: $colorRwFak;
-		}
-		&.med,
-		&.medfak {
-			border-color: $colorMedFak;
-		}
-		&.nat,
-		&.natfak  {
-			border-color: $colorNatFak;
-		}
-		&.tf,
-		&.techfak {
-			border-color: $colorTechFak;
-		}
-	}
-    }
-}	
