div. letzter feinschliff.
Das wars von mir & thanks for the fish.

--- a/css/sass/structure/hero/_slider.scss
+++ b/css/sass/structure/hero/_slider.scss
@@ -23,8 +23,8 @@
 		    vertical-align: middle;
 		    z-index: 5;
 		}
-		
-		h2 {
+		h2,
+		h3 {
 			color: #fff;
 			background: rgba($colorPrimary,0.8);
 			display: inline;
