--- a/css/sass/structure/header/_branding.scss
+++ b/css/sass/structure/header/_branding.scss
@@ -129,12 +129,14 @@
         max-height: inherit;
         font-weight: bold;
         text-decoration: none;
-        padding: 0;
+        padding: 0 15px;
 
         @media (min-width: $screen-sm ) {
               max-height: 65px;
               margin-top: 0px;
-        }
+	       padding: 0;
+        } 
+
 
         a, span {
             display: table-cell;
