--- a/css/sass/structure/hero/_linkregion.scss
+++ b/css/sass/structure/hero/_linkregion.scss
@@ -83,10 +83,21 @@
     
     .infobar {
 	padding-top: 5px;
-
-	p.description {
+	
+	p {
 	    font-weight: normal;
 	    color: #fff;
+	}
+	p.sitetitle,
+	h1 {
+	    @include px2rem($font-size-h1,  $font-size-base, $font-size-h1 * 1.3);
+	    @include hyphens(none);
+	    position: relative;
+	    z-index: 10;
+	    padding-top: 0px;
+	}
+
+	p.description {
 	    @include px2rem($font-size-hero-bannertext);
 	    padding: 0;
 	    margin: 10px 0 0 0; 
