- #434 - TinyMCE Buttons aus Default reduziert - Pluginsupport Synonyme und FAQ/Glossar ergänzt - RRZE Element-Support - Suchergebnisse als Listen (WCAG)

--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -1,7 +1,7 @@
 //-----------------------------------------------------------------------------------*/
 // Konstanten fuer das Design
 //-----------------------------------------------------------------------------------*/
-$version:  '1.9.17';
+$version:  '1.9.18';
     // Theme Version
     // First Digit:  Manual
     // Second Digit: Branch Version
@@ -252,6 +252,7 @@ $font-size-h1-desktopbranding-longtitle:    17;
 $font-size-h1-banner:		28;
 $font-size-h1-sidebar:		22;
 $font-size-h1-table:		22;
+$font-size-h1-small:		24;
 
 
 $font-size-h2:			24;
