--- a/css/sass/structure/hero/_slider.scss
+++ b/css/sass/structure/hero/_slider.scss
@@ -12,17 +12,7 @@
 	overflow: hidden;
 	@include box-shadow(0 10px 20px rgba(0,0,0,0.5));
 	
-	.hero-slide {
-		position: relative;
-		height: inherit;
-		
-		img {
-		    height: 100%;
-		    width: auto;
-		    max-width: inherit;
-		    vertical-align: middle;
-		    z-index: 5;
-		}
+	.item {
 		h2,
 		h3 {
 			color: #fff;
@@ -128,5 +118,109 @@
    @extend .col-sm-10;
 }
 
+
+/* Carousel slider */
+
+button {
+  &#playButton, &#pauseButton, &#next, &#prev {
+    border-radius: 0;
+    background-color: rgba(255,255,255,0.5);
+    border:none;
+  }
+  &#playButton:hover, &#pauseButton:hover, &#next:hover, &#prev:hover {
+    opacity: 1;
+    border-radius: 0;
+    background: #fff;
+  }
+}
+
+i.fa.fa-play, i.fa.fa-pause  {
+    color: #036;
+    opacity: 1;
+    font-size: 1.25em;
+  
+}
+
+i.fa.fa-chevron-right, i.fa.fa-chevron-left {
+    vertical-align: -6%;
+    color: #036;
+    opacity: 1;
+    font-size: 1.25em;
+}
+
+button#next:focus, button#prev:focus {
+    background: #fff;
+    outline: 0;
+}
+
+button#playButton:focus, button#pauseButton:focus {
+    outline: 0;
+}
+
+.carousel-inner > .item > 
+  img, a > img {
+    display: block;
+    max-width: none;
+    height: auto;
+    line-height: 1;
+  }
+
+#hero-slides .hero-slide-text {
+  top: initial;
+}
+
+#carouselButtons {
+  right: 5%;
+  top: 80%;
+  position: absolute;
+  bottom: 0px;
+  z-index: 100;
+}
+
+.carousel-control {
+  &.left, &.right {
+    border: none;
+    background-image: none;
+    z-index: 100;
+  }
+}
+
+.carousel-fade {
+  .carousel-inner {
+    .item {
+      opacity: 0;
+      transition-property: opacity;
+    }
+    .active {
+      opacity: 1;
+      &.left, &.right {
+        left: 0;
+        opacity: 0;
+        z-index: 1;
+      }
+    }
+    .next.left, .prev.right {
+      opacity: 1;
+    }
+  }
+  .carousel-control {
+    z-index: 2;
+  }
+}
+
+@media all and (transform-3d), (-webkit-transform-3d) {
+  .carousel-fade .carousel-inner > .item {
+    &.next, &.active.right, &.prev, &.active.left {
+      opacity: 0;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
+    &.next.left, &.prev.right, &.active {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
+  }
+}
 
 
