--- a/css/sass/structure/hero/_linkregion.scss
+++ b/css/sass/structure/hero/_linkregion.scss
@@ -5,7 +5,7 @@
 
 .hero-navigation {
     ul {
-		@include no-list;
+	@include no-list;
     }
     li {
 	display: table;
@@ -128,6 +128,7 @@
     display: none;
 	@media (min-width: $screen-sm) {
 	    display: block;
+	    margin-top: 10px;
 	}
 }
 
