--- a/css/sass/structure/hero/_slider.scss
+++ b/css/sass/structure/hero/_slider.scss
@@ -2,13 +2,10 @@
 /* Slider im Hero-Teil
 /*-----------------------------------------------------------------------------------*/
 
-
 #hero-slides {
 	position: relative;
 	margin: 0 auto -15px auto;
-	height: 350px;
 	background: $colorPrimary;
-	max-width: 1260px;
 	overflow: hidden;
 	@include box-shadow(0 10px 20px rgba(0,0,0,0.5));
 	
@@ -25,8 +22,15 @@
 			box-decoration-break: clone;
 			-webkit-box-decoration-break: clone;
 		}
+
 		.slider-text {
-		    display: inline-block;
+		    @extend .col-xs-12;
+		    @extend .col-sm-10;
+		    
+		    display: none;   
+		    @media (min-width:  $screen-sm) {
+			  display: inline-block;
+		    }
 		}
 		
 		p {
@@ -49,17 +53,26 @@
 		    background: $colorCopyrightBackground;
 		    color: $colorCopyright;
 		    @include px2rem($font-size-hero-slider-copyright);
-
-		    position: absolute;
-		    bottom: 0;
-		    right: 0;
 		    z-index: 6;
 		    margin: 0;
 		    padding: 1px 4px;
+		    position: absolute;
+		    right: 0;
+		    bottom: 0;
+		}
+		
+		
+		img {
+		    display: block;
+		    line-height: 1;	
+		    width: auto;
+		    max-width: inherit;
+		    vertical-align: middle;
 		}
 		
 	}
 	.slider-titel {
+	    @extend .col-xs-12;
 	    margin-bottom: 5px;
 	}
 	.hero-slide-text {
@@ -83,160 +96,173 @@
 	}
 	
 	
-	display: none;
-
-	@media (min-width: $screen-sm) {
-	    display: block;
-	    top: -20px;
-	    .no-js & {
-	    	display: none;
-	    }
-	}
-	@media (max-width: $breakLG) {
-	    .hero-slide {
+	
+	.hero-slide {
 		img {
 		    vertical-align: middle;
 		}
-
-		p {
-		    .credits {
-			top: 10px;
-			bottom: inherit;
-		    }
-		}
-
+	}
+	
+	display: none;
+	
+	@media (min-width: $screen-sm) {
+	    display: block;
+	    height: 214px;  
+	    max-width: 100%;
+	  
+	    .no-js & {
+	    	display: none;
+	    }
+	    img {
+		height: 214px;
+		max-height: 214px;
 	    }
 	}
+	@media (min-width: $screen-md) {
+	    height: 350px;
+	    max-width: 1260px;
+	    top: -20px;
+	    img {
+		height: 350px;
+		max-height: 350px;
+	    }
+	}
+	
 
-}
-
-.slider-titel {
-   @extend .col-xs-12;
-}
-.slider-text {
-   @extend .col-xs-12;
-   @extend .col-sm-10;
 }
 
 
 /* Carousel slider */
 
-button {
-  &#playButton, &#pauseButton, &#next, &#prev, &#toggleCarousel {
-    border-radius: 0;
-    background-color: rgba(255,255,255,0.5);
-    border:none;
-    padding: 8px 10px;
-  }
-  &#playButton:hover, &#pauseButton:hover, &#next:hover, &#prev:hover, &#toggleCarousel:hover {
-    opacity: 1;
-    border-radius: 0;
-    background: #fff;
-  }
-  &#toggleCarousel {
-      margin-right: 1px;
-  }
-}
 
-i.fa.fa-play  {
-    color: #036;
-    opacity: 1;
-    font-size: 1.25em;
-  
-}
-
-i.fa.fa-pause {
-    color: #036;
-    opacity: 1;
-    font-size: 1.15em; 
-}
-
-i.fa.fa-chevron-right, i.fa.fa-chevron-left {
-    vertical-align: -6%;
-    color: #036;
-    opacity: 1;
-    font-size: 1.25em;
-}
-
-button#toggleCarousel , x:-moz-any-link, x:default {
-    margin-right: 0px;
-}
-
-#next:focus, #prev:focus {
-    background: #fff;
-    outline: 0;
-}
-
-button#playButton:focus, pauseButton:focus, #toggleCarousel:focus {
-    background: #fff;
-    outline: 0;
-}
-
-.carousel-inner > .item > 
-  img, a > img {
-    display: block;
-    max-width: none;
-    height: auto;
-    line-height: 1;
-  }
-
-#hero-slides .hero-slide-text {
-  top: initial;
-}
-
-#carouselButtons {
-  right: 5%;
-  top: 80%;
-  position: absolute;
-  bottom: 0px;
-  z-index: 10;
-  font-size: 0.75em;
-}
-
-.carousel-control {
-  &.left, &.right {
-    border: none;
-    background-image: none;
-    z-index: 100;
-  }
-}
-
-.carousel-fade {
-  .carousel-inner {
-    .item {
-      opacity: 0;
-      transition-property: opacity;
+    button {
+	&#playButton, 
+	&#pauseButton, 
+	&#next, 
+	&#prev, 
+	&#toggleCarousel {
+	    border-radius: 0;
+	    background-color: rgba(255,255,255,0.5);
+	    border:none;
+	    padding: 8px 10px;
+	}
+	&#playButton:hover, 
+	&#pauseButton:hover, 
+	&#next:hover, 
+	&#prev:hover, 
+	&#toggleCarousel:hover {
+	    opacity: 1;
+	    border-radius: 0;
+	    background: #fff;
+	}
+	&#toggleCarousel {
+	    margin-right: 1px;
+	}
     }
-    .active {
-      opacity: 1;
-      &.left, &.right {
-        left: 0;
-        opacity: 0;
-        z-index: 1;
-      }
-    }
-    .next.left, .prev.right {
-      opacity: 1;
-    }
-  }
-  .carousel-control {
-    z-index: 2;
-  }
-}
+    .carousel-inner {
+	i.fa.fa-play  {
+	    color: #036;
+	    opacity: 1;
+	    font-size: 1.25em;
 
-@media all and (transform-3d), (-webkit-transform-3d) {
-  .carousel-fade .carousel-inner > .item {
-    &.next, &.active.right, &.prev, &.active.left {
-      opacity: 0;
-      -webkit-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0);
+	}
+
+	i.fa.fa-pause {
+	    color: #036;
+	    opacity: 1;
+	    font-size: 1.15em; 
+	}
+
+	i.fa.fa-chevron-right, 
+	i.fa.fa-chevron-left {
+	    vertical-align: -6%;
+	    color: #036;
+	    opacity: 1;
+	    font-size: 1.25em;
+	}
+	 button#toggleCarousel, 
+	x:-moz-any-link, x:default {
+	    margin-right: 0px;
+	}
+
+	#next:focus, 
+	#prev:focus {
+	    background: #fff;
+	    outline: 0;
+	}
+
+	button#playButton:focus, 
+	pauseButton:focus, 
+	#toggleCarousel:focus {
+	    background: #fff;
+	    outline: 0;
+	}
+
     }
-    &.next.left, &.prev.right, &.active {
-      opacity: 1;
-      -webkit-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0);
+   /*
+    
+*/
+    #hero-slides .hero-slide-text {
+	top: initial;
     }
-  }
-}
+
+    #carouselButtons {
+	right: 40px;
+	@media (min-width: $screen-md) {
+	    right: 70px;
+	}
+	position: absolute;
+	bottom: 30px;
+	z-index: 10;
+	font-size: 0.75em;
+    }
+
+    .carousel-control {
+	&.left, 
+	&.right {
+	    border: none;
+	    background-image: none;
+	    z-index: 100;
+	}
+    }
+
+    .carousel-fade {
+	.carousel-inner {
+	    .item {
+		opacity: 0;
+		transition-property: opacity;
+	    }
+	    .active {
+		opacity: 1;
+		&.left, &.right {
+		    left: 0;
+		    opacity: 0;
+		    z-index: 1;
+		}
+	    }
+	    .next.left, 
+	    .prev.right {
+		opacity: 1;
+	    }
+	}
+	.carousel-control {
+	    z-index: 2;
+	}
+    }
+
+    @media all and (transform-3d), (-webkit-transform-3d) {
+	.carousel-fade .carousel-inner > .item {
+	      &.next, &.active.right, &.prev, &.active.left {
+		opacity: 0;
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	      }
+	      &.next.left, &.prev.right, &.active {
+		opacity: 1;
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	      }
+	}
+    }
 
 
