--- a/css/sass/structure/hero/_linkregion.scss
+++ b/css/sass/structure/hero/_linkregion.scss
@@ -31,8 +31,6 @@
 	&.natfak, &.tf,
 	&.techfak, 
 	&.white, &.grau {
-	    min-height: 34px;
-	    line-height: 34px;
 	    border-left: 8px solid transparent;
 	    vertical-align: center;
 	    @include hyphens(auto);
@@ -127,6 +125,10 @@
 #hero .hero-navigation {
     display: none;
 	@media (min-width: $screen-sm) {
+	    display: block;
+	    margin-top: 20px;
+	}
+	@media (min-width: $screen-md) {
 	    display: block;
 	    margin-top: 10px;
 	}
