--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -1,7 +1,7 @@
 //-----------------------------------------------------------------------------------*/
 // Konstanten fuer das Design
 //-----------------------------------------------------------------------------------*/
-$version:  '1.10.3';
+$version:  '1.10.4';
     // Theme Version
     // First Digit:  Manual
     // Second Digit: Branch Version
@@ -208,6 +208,7 @@ $colorCopyrightBackground:  rgba(0,0,0,0.7);
 
 
 // Font sizes
+$font-size-rembase:		94%;
 $font-size-gridbase:		15;
 $font-size-base:		15;
 $font-size-meta:		13;
