--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -1,7 +1,7 @@
 //-----------------------------------------------------------------------------------*/
 // Konstanten fuer das Design
 //-----------------------------------------------------------------------------------*/
-$version:  '1.10.6';
+$version:  '1.10.7';
     // Theme Version
     // First Digit:  Manual
     // Second Digit: Branch Version
@@ -305,7 +305,13 @@ $font-size-print-base:		11;
 $font-size-print-base-small:	9;
 
 
-
+// Slider
+$slick-arrow-color: white !default;
+$slick-opacity-default: 0.75 !default;
+$slick-opacity-on-hover: 1 !default;
+$slick-opacity-not-active: 0.25 !default;
+   
+   
 // Define breakpoints
 
 // iPhone 3G
