--- a/css/sass/structure/hero/_slider.scss
+++ b/css/sass/structure/hero/_slider.scss
@@ -6,7 +6,6 @@
 	position: relative;
 	margin: 0 auto -15px auto;
 	background: $colorPrimary;
-	// overflow: hidden;
 	@include box-shadow(0 10px 20px rgba(0,0,0,0.5));
 	
 	.item {
@@ -26,65 +25,62 @@
 	    
 	    
 	    
-		h2,
-		h3 {
-			color: #fff;
-			background: rgba($colorPrimary,0.8);
-			display: inline;
-			padding: 3px;
-			margin: 10px 0 15px 0;
-			@include px2rem($font-size-hero-slider-title);
-			
-			box-decoration-break: clone;
-			-webkit-box-decoration-break: clone;
-		}
+	    h2,
+	    h3 {
+		    color: #fff;
+		    background: rgba($colorPrimary,0.8);
+		    display: inline;
+		    padding: 3px;
+		    margin: 10px 0 15px 0;
+		    @include px2rem($font-size-hero-slider-title);
 
-		.slider-text {
-		    @extend .col-xs-12;
-		    @extend .col-sm-10;
-		    
-		    display: none;   
-		    @media (min-width:  $screen-sm) {
-			  display: inline-block;
-		    }
+		    box-decoration-break: clone;
+		    -webkit-box-decoration-break: clone;
+	    }
+
+	    .slider-text {
+		@extend .col-xs-12;
+		@extend .col-sm-10;
+
+		display: none;   
+		@media (min-width:  $screen-sm) {
+		      display: inline-block;
 		}
-		
-		p {
-			@include px2rem($font-size-hero-slider-text,$font-size-gridbase,$font-size-hero-slider-text * 1.7);
-			color: #fff;
-			background: rgba($colorPrimary,0.8);
-			padding: 3px;
-			margin: 0;
-			box-decoration-break: clone;
-			 -webkit-box-decoration-break: clone;
-			display: none;
-			 
-			 
-			@media (min-width: $screen-sm) {
-				display: inline;
-			}
-			 
-		}
-		p.credits {
-		    background: $colorCopyrightBackground;
-		    color: $colorCopyright;
-		    @include px2rem($font-size-hero-slider-copyright);
-		    z-index: 6;
+	    }
+
+	    p {
+		    @include px2rem($font-size-hero-slider-text,$font-size-gridbase,$font-size-hero-slider-text * 1.7);
+		    color: #fff;
+		    background: rgba($colorPrimary,0.8);
+		    padding: 3px;
 		    margin: 0;
-		    padding: 1px 4px;
-		    position: absolute;
-		    right: 0;
-		    bottom: 0;
-		}
-		img {
-		    min-height: 350px;
-		    min-width: 1260px;
-		    vertical-align: middle;
-		    z-index: 5;
-		}
-		
-		
-		
+		    box-decoration-break: clone;
+		     -webkit-box-decoration-break: clone;
+		    display: none;
+
+
+		    @media (min-width: $screen-sm) {
+			    display: inline;
+		    }
+
+	    }
+	    p.credits {
+		background: $colorCopyrightBackground;
+		color: $colorCopyright;
+		@include px2rem($font-size-hero-slider-copyright);
+		z-index: 6;
+		margin: 0;
+		padding: 1px 4px;
+		position: absolute;
+		right: 0;
+		bottom: 0;
+	    }
+	    img {
+		min-height: 350px;
+		min-width: 1260px;
+		vertical-align: middle;
+		z-index: 5;
+	    }
 	}
 	.slider-titel {
 	    @extend .col-xs-12;
@@ -104,14 +100,10 @@
 		padding: 0;
 	
 	}
-	
-	
-	
-	
+
 	display: none;
 	height: auto;
-	
-	@media (min-width: $screen-sm) {
+	@media (min-width: $screen-xs) {
 	    display: block;
 	    width: 100%;
 	    max-height: 350px;  
@@ -121,133 +113,158 @@
 	    top: -20px;
 	}
 	@media (min-width: 1260px) {
-	   
 	    width: 1260px;
 	    height: 350px;
 	}
-}
 
 
 
+   .slick-prev,
+   .slick-next {
+       position: absolute;
+       display: block;
+       height: 30px;
+       width: 30px;
+       line-height: 0px;
+       font-size: 0px;
+       cursor: pointer;
+       background: transparent;
+       color: transparent;
+       top: 50%;
+       -webkit-transform: translate(0, -50%);
+       -ms-transform: translate(0, -50%);
+       transform: translate(0, -50%);
+       padding: 0;
+       border: none;
+       outline: none;
 
-    #hero-slides .hero-slide-text {
-//	top: initial;
-    }
 
-  
+       &:hover, 
+       &:focus {
+	   outline: none;
+	   background: transparent;
+	   color: transparent;
+	   &:before {
+	       opacity: $slick-opacity-on-hover;
+	   }
+       }
+       &.slick-disabled:before {
+	   opacity: $slick-opacity-not-active;
+       }
+       &:before {
+	   font-size: 30px;
+	   line-height: 1;
+	   color: $slick-arrow-color;
+	   opacity: $slick-opacity-default;
+	   text-shadow: 2px 2px #000;
+	   -webkit-font-smoothing: antialiased;
+	   -moz-osx-font-smoothing: grayscale;
+       }
+   }
+
+   .slick-prev {
+       left: 5px;
+       [dir="rtl"] & {
+	   left: auto;
+	   right: 5px;
+       }
+       
+	@media (min-width: $break-1360) {
+	   left: -40px;
+	    [dir="rtl"] & {
+		left: auto;
+		right: -40px;
+	    }
+	}
+       
+       
+       
+       &:before {	
+	   @extend .fa;
+	   @extend .fa-chevron-left;
+
+	   [dir="rtl"] & {
+	       @extend .fa-chevron-right;
+	   }
+       }
+       &:hover, 
+       &:focus {	       
+	       transition-timing-function: ease;
+	       
+		@media (min-width: $break-1360) {
+		    left: -45px;
+		    [dir="rtl"] & {
+			left: auto;
+			right: -45px;
+		    }
+		}
+       }
+   }
+
+   .slick-next {
+       right: 5px;
+       [dir="rtl"] & {
+	   left: 5px;
+	   right: auto;
+	}
+	@media (min-width: $break-1360) {
+	    right: -40px;
+	    [dir="rtl"] & {
+		left: -40px;
+		right: auto;
+	     }
+	}
+       
+       
+       &:before {
+	   @extend .fa;
+	   @extend .fa-chevron-right;
+
+	   [dir="rtl"] & {
+	       @extend .fa-chevron-left;
+	   }
+       }
+       &:hover, 
+       &:focus {
+	    @media (min-width: $break-1360) {
+	       right: -45px;
+	       [dir="rtl"] & {
+		   right: auto;
+		   left: -45px;
+	       }
+	    }
+	    transition-timing-function: ease;
+       }
+   }
 
 
+    .slick-startstop {
+       position: absolute;
+       display: block;
+       top: 20px;
+       right: 0px;
 
- /* Arrows */
-$slick-loader-path: "./img/" !default;
-$slick-arrow-color: white !default;
-$slick-dot-color: black !default;
-$slick-dot-color-active: $slick-dot-color !default;
-$slick-dot-character: "\2022" !default;
-$slick-dot-size: 6px !default;
-$slick-opacity-default: 0.75 !default;
-$slick-opacity-on-hover: 1 !default;
-$slick-opacity-not-active: 0.25 !default;
+       
+	@media (min-width: $screen-md) {
+		top: 5px;
+	}
 
-.slick-play,
-.slick-stop,
-.slick-prev,
-.slick-next {
-    position: absolute;
-    display: block;
-    height: 20px;
-    width: 20px;
-    line-height: 0px;
-    font-size: 0px;
-    cursor: pointer;
-    background: transparent;
-    color: transparent;
-    top: 50%;
-    -webkit-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    transform: translate(0, -50%);
-    padding: 0;
-    border: none;
-    outline: none;
-    
-    
-    &:hover, 
-    &:focus {
-        outline: none;
-        background: transparent;
-        color: transparent;
-        &:before {
-            opacity: $slick-opacity-on-hover;
-        }
-    }
-    &.slick-disabled:before {
-        opacity: $slick-opacity-not-active;
-    }
-    &:before {
-        font-size: 30px;
-        line-height: 1;
-        color: $slick-arrow-color;
-        opacity: $slick-opacity-default;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-	
-    }
-}
+       background: $colorCopyrightBackground;
+       color: $colorCopyright;
+       @include px2rem($font-size-hero-slider-copyright);
+       margin: 0;
+       padding: 1px 4px;
+       border: none;
 
-.slick-prev {
-    left: -30px;
-    [dir="rtl"] & {
-        left: auto;
-        right: -30px;
-    }
-    &:before {	
-	@extend .fa;
-	@extend .fa-chevron-left;
-	
-        [dir="rtl"] & {
-	    @extend .fa-chevron-right;
-        }
-    }
-}
+       &:hover, 
+       &:focus {
+	       color: #fff;
+	       background: #000;
+	       transition-timing-function: ease;
+       }	   
 
-.slick-next {
-    right: -30px;
-    [dir="rtl"] & {
-        left: -30px;
-        right: auto;
-    }
-    &:before {
-	@extend .fa;
-	@extend .fa-chevron-right;
-	
-        [dir="rtl"] & {
-	    @extend .fa-chevron-left;
-        }
-    }
-}
-
-.slick-stop {
-    top: 30px;
-    right: 20px;
-        
-    &:before {
-	@extend .fa;
-	@extend .fa-stop-circle;
-//	box-shadow: 0 10px 20px rgba(0,0,0,0.5); 
-//	opacity: 1;
-//	background: #000;
-
-    }
-}
-.slick-play {
-    top: 30px;
-    right: 20px;
-    background: #000;
-    
-    &:before {
-	@extend .fa;
-	@extend .fa-play-circle;
-//	box-shadow: 0 10px 20px rgba(0,0,0,0.5); 
-
-    }
+       .no-js & {
+	   display: none;
+       }
+   }
 }
